Tue Apr 29 15:08:45 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Removed invalid first line, add Id in footer

Tue Apr 22 08:29:26 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/ACE+TAO+CIAO+DAnCE.json:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * debian/debian.changelog:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Make x.2.6 public

Tue Apr 22 08:44:41 CEST 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.6 released.

Fri Apr 18 06:49:06 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
          Fix executable test for targets with mapped root.

        * bin/PerlACE/TestTarget.pm:
          Add IP_ADDRESS configuration option and auto determination.

        * bin/PerlACE/TestTarget_Android.pm:
          Small cleanup.

Fri Apr 11 21:26:28 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/SSL/SSL_Context.cpp:
          Scoreboard cleanup. The directory add feature discussed in
          bug 3337 still doesn't work on windows.

Thu Apr 10 17:50:33 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SSL/SSL_Context.cpp:
          Removed not needed semi colon

Thu Apr 10 11:54:12 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_02_Test.cpp:
        * tests/Compiler_Features_04_Test.cpp:
        * tests/Compiler_Features_05_Test.cpp:
        * tests/Compiler_Features_06_Test.cpp:
        * tests/Compiler_Features_07_Test.cpp:
        * tests/Compiler_Features_11_Test.cpp:
        * tests/Compiler_Features_12_Test.cpp:
          Layout changes

        * tests/run_test.lst:
        * tests/tests.mpc:
        * tests/Compiler_Features_30_Test.cpp:
          Removed this test, an empty initializer list for
          an array of unknown size is illegal according to the
          C++ spec
